# Tabula

./: .gitignore  ARCHITECTURE_PLAN.md  CODEBUDDY.md  Cargo.toml  EXCEL_UI_IMPLEMENTATION.md  README.md  SAVE_UPDATE_LOGIC.md  TEST_REPORT.md  architecture_flow.md  my_data.json  package_source.ps1  reproduce_echo.js  restart_all.ps1  task_plan.md  ui_solution_comparison.md  verify_queries.py
design_docs/: db_l1_cache_strategy.md
doc/: federated_query_design.md  federated_query_design_preview.html
docs/: AI-architecture.md  AI-dsl-spec.md  ARCHITECTURE_PLAN.md  architecture_principles_review_2026-03-09.md  db_l1_cache_strategy.md  excel_technical_implementation_plan.md  federated_query_design.md  federated_query_design_preview.html  glide_grid_solutions.md  stress_test_report_v2.md  system_architecture_design.html  system_metrics_summary.md  冷热数据管理与缓存架构详解.md  系统架构与类图设计.md
federated_query_engine/: BASIC_README  Cargo.toml  METADATA_ARCHITECTURE.md  POOL_RELIABILITY_TEST_REPORT.md  STRESS_TEST_REPORT.md  TEST_PLAN.md  check_all_conns.py  check_all_logs.py  check_bmsql.py  check_conn_tables.py  check_conns.py  check_logs.py  check_registered_tables.py  check_registered_tables_v2.py  check_schemas.py  check_sync_logs.py  check_tables.py  check_tpcc_tables.py  check_tpcc_tables_v2.py  clean_connections.ps1  conns_output.txt  demo_consistency.js  generate_report.py  list_exports.py  list_exports_simple.py  logs_output.txt  logs_output_v2.txt  metrics_final.json  package-lock.json  package.json  performance_report.html  query.json  register_yashan.py  reproduce_issue.py  simulate_bug.py  test_fix.py  test_frontend.js  test_query.ps1  verify_merge_complex.ps1  verify_migration_full.cjs  (+5 more)
federated_query_engine/docs/: debug_plan_tpcc_join.md  e2e_simulation_plan.md  federated_query_optimization.md  project_status_and_roadmap.md  sql_rewriter_logic.md
federated_query_engine/public/: demo.html  index.html  modern_demo.html
federated_query_engine/scripts/: smoke_test_delete.py  sql_cases_tpcc.sql  sql_parser_tpcc.ps1
federated_query_engine/src/: cache_e2e_test.rs  cache_manager.rs  cache_pipeline.rs  cache_stress_test.rs  config.rs  lib.rs  link_consistency_test.rs  logger.rs  main.rs  metadata_manager.rs  pool_reliability_test.rs  query_rewriter.rs  sql_parser_tpcc_tests.rs  utils.rs
federated_query_engine/src/api/: ensure_columns_handler.rs  execute_handler.rs  grid_handler.rs  health_handler.rs  mod.rs  plan_handler.rs  register_handler.rs  session_handler.rs  update_handler.rs  upload_handler.rs
federated_query_engine/src/datasources/: csv.rs  excel.rs  mod.rs  oracle.rs  parquet.rs  sql_dialect.rs  sqlite.rs  yashandb.rs  yashandb_repro_test.rs
federated_query_engine/src/optimizer/: mod.rs  oracle_pushdown.rs
federated_query_engine/src/resources/: mod.rs  oracle_manager.rs  pool_manager.rs  sqlite_manager.rs  yashan_manager.rs
federated_query_engine/src/services/: execute_service.rs  grid_service.rs  health_service.rs  mod.rs  register_service.rs  upload_service.rs
federated_query_engine/src/session_manager/: mod.rs  mod.rs.bak
federated_query_engine/tests/: api_integration_test.rs  e2e_simulation.ps1  e2e_verification.js  smoke_test_upload.py  test_metadata_sync.py  verification.py  verify_fix.ps1  verify_upload.ps1
frontend/: .gitignore  E2E_TEST_REPORT_MULTISHEET_CN.md  MERGE_FIX_DOCUMENTATION.md  README.md  SUPPORTED_FORMULAS.md  TEST_CASES.md  TEST_REPORT_ITERATION_2.md  TEST_REPORT_ITERATION_3.md  e2e_report.md  e2e_test.js  index.html  package-lock.json  package.json  test_conn.cjs  tsconfig.json  verify_auto_hydrate.ps1  verify_backend_api.ps1  verify_data.js  verify_fork_and_extend.ps1  verify_glide_edit.js  verify_lance.cjs  verify_memory_edit.ps1  verify_multisession.js  verify_numeric_edit.js  (+4 more)
metadata_store/: Cargo.toml
metadata_store/src/: lib.rs
(+221 files in other folders)
