[package]
name = "tabula"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "federated_query_engine",
    "metadata_store",
    "wasm_grid",
]
resolver = "2"

[dependencies]
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
metadata_store = { path = "metadata_store" } # 暂时注释，因为缺少 C 编译器无法编译 SQLite
