[package]
name = "federated_query_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["multipart"] }
calamine = "0.32.0"
datafusion = "41.0.0"
arrow = "52.2.0"
chrono = "=0.4.38"
rust_xlsxwriter = "0.92.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
encoding_rs = "0.8.35"
rusqlite = { version = "0.32.1", features = ["bundled"] }
metadata_store = { path = "../metadata_store" }
futures = "0.3.31"
tokio-stream = "0.1.18"
oracle = { version = "0.6.0", optional = true }
md5 = "0.8.0"
csv = "1.4.0"
rand = "0.9.2"

[features]
default = []
oracle = ["dep:oracle"]
