[package]
name = "federated_query_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["multipart"] }
calamine = "0.32.0"
datafusion = "52.1.0"
arrow = "57.2.0"
parquet = "57.2.0"
chrono = "0.4.43"
rust_xlsxwriter = "0.92.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
encoding_rs = "0.8.35"
rusqlite = { version = "0.32.1", features = ["bundled"] }
metadata_store = { path = "../metadata_store" }
futures = "0.3.31"
tokio-stream = "0.1.18"
oracle = { version = "0.6.0", optional = true }
md5 = "0.8.0"
libloading = "0.9.0"
once_cell = "1.21.3"
odbc-api = "5.1.0"
sysinfo = "0.30.12"
lazy_static = "1.5.0"
regex = "1.10.4"
object_store = "0.12.0"
r2d2 = "0.8.10"

[dev-dependencies]
tower = "0.5"

[features]
default = ["oracle"]
oracle = ["dep:oracle"]
