[package]
name = "federated_query_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.89"
axum = { version = "0.8.8", features = ["multipart"] }
calamine = "0.32.0"
datafusion = "41.0.0"
arrow = "52.2.0"
chrono = "=0.4.38"
rust_xlsxwriter = "0.92.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
encoding_rs = "0.8.35"
rusqlite = { version = "0.32.1", features = ["bundled"] }
metadata_store = { path = "../metadata_store" }
futures = "0.3.31"
tokio-stream = "0.1.18"
oracle = { version = "0.6.0", optional = true }
md5 = "0.8.0"
csv = "1.4.0"
rand = "0.9.2"
# **[2026-02-26]** 变更原因：替代平台命令获取系统内存与磁盘信息。
# **[2026-02-26]** 变更目的：统一跨平台实现并提升测试稳定性。
# **[2026-02-26]** 变更说明：仅用于系统信息读取，不影响接口。
# **[2026-02-26]** 变更说明：与缓存阈值计算和磁盘占用判断配合。
# **[2026-02-26]** 变更说明：可与测试钩子一起稳定断言。
sysinfo = "0.31"

[features]
default = []
oracle = ["dep:oracle"]
