[package]
name = "metadata_store"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arrow = { version = "57.2.0", features = ["prettyprint"] }
parquet = { version = "57.2.0" }
thiserror = "1.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
